--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
 
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Template Engine Lab </title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+  Hello world
+  <div id="app"></div>
+  <script src="script.js"></script>
+
+</body>
+
+</html>
